test-suite/invalid/types/yaml-aliases.jyml
# Invalid: YAML aliases not supported in JYAML
"original": &anchor "value"
"reference": *anchor